--- a/site/about.html
+++ b/site/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rólunk - Hajós Akadémia</title>
+    <title>Rólunk - ENCA</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,14 +13,13 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="forrasok/logo (2).png" alt="Hajós Akadémia Logo">
-                    <span>HAJÓS AKADÉMIA</span>
+                    <img src="forrasok/logo (2).png" alt="ENCA Logo">
+                    <span>ENCA</span>
                 </a>
 
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
                         <li><a href="courses.html" class="nav-link" data-translate="nav-courses">Courses</a></li>
-                        <li><a href="certificates.html" class="nav-link" data-translate="nav-certificates">Certificates & Permits</a></li>
                         <li><a href="about.html" class="nav-link active" data-translate="nav-about">About Us</a></li>
                         <li><a href="contact.html" class="nav-link" data-translate="nav-contact">Contact Us</a></li>
                     </ul>
@@ -28,10 +27,10 @@
                     <div class="header-actions">
                         <div class="language-selector">
                             <button class="lang-btn active" data-lang="hu">🇭🇺</button>
-                            <button class="lang-btn" data-lang="en">🇺🇸</button>
+                            <button class="lang-btn" data-lang="en">🇬🇧</button>
                         </div>
                         <a href="#instructor-login" class="btn btn-instructor">
-                            <i class="fas fa-user"></i> <span data-translate="instructor-login">Oktatói Felület</span>
+                            <i class="fas fa-user"></i> <span data-translate="instructor-login">Sail Portal</span>
                         </a>
                     </div>
                 </nav>
@@ -58,16 +57,16 @@
         <div class="container">
             <div class="about-intro">
                 <div class="intro-text">
-                    <h2 data-translate="about-history-title">A Hajós Akadémia Története</h2>
-                    <p data-translate="about-history-p1">A Hajós Akadémia több évtizedes tapasztalattal rendelkezik a vízi közlekedési oktatás terén. 1985-ben alapítottuk azzal a céllal, hogy magas színvonalú, nemzetközi sztenderdeknek megfelelő hajózási képzéseket nyújtsunk Magyarországon.</p>
-                    <p data-translate="about-history-p2">Az évek során több mint 10,000 sikeres vizsgázót bocsátottunk ki, akik ma a vízi közlekedés különböző területein tevékenykednek - a rekreációs hajózástól kezdve a professzionális kereskedelmi hajózásig.</p>
+                    <h2 data-translate="about-history-title">A European Nautical Crew Academy</h2>
+                    <p data-translate="about-history-p1">A European Nautical Crew Academy-t a hajózásban jártas, több évtizedes tapasztalattal rendelkező szakemberek alapították azzal a céllal, hogy Magyarországon is magas színvonalú felkészítést biztosítsanak a nemzetközileg elismert, angol nyelvű hajózási vizsgákhoz.</p>
+                    <p data-translate="about-history-p2">Az iskola üzemeltetője a Beach Boat Kft., amelynek felügyeletét az Építési és Közlekedési Minisztérium látja el. Bizonyos vizsgák esetében a Közlekedési és Alkalmassági Vizsgaközpont hivatalos vizsgabiztosai járnak el.</p>
                 </div>
                 <div class="intro-image">
-                    <img src="https://via.placeholder.com/500x400?text=Hajós+Akadémia" alt="Hajós Akadémia">
+                    <img src="https://via.placeholder.com/500x400?text=European+Nautical+Crew+Academy" alt="European Nautical Crew Academy">
                 </div>
             </div>
 
-            <div class="mission-vision">
+            <!-- <div class="mission-vision">
                 <div class="mission">
                     <div class="icon-box">
                         <i class="fas fa-bullseye"></i>
@@ -83,9 +82,9 @@
                     <h3 data-translate="about-vision-title">Vízió</h3>
                     <p data-translate="about-vision-desc">Magyarország vezető hajózási oktatási intézményeként szeretnénk továbbra is élenjárni a modern technológiák alkalmazásában és a legmagasabb színvonalú képzések nyújtásában.</p>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="values-section">
+            <!-- <div class="values-section">
                 <h2 data-translate="about-values-title">Értékeink</h2>
                 <div class="values-grid">
                     <div class="value-card">
@@ -112,9 +111,9 @@
                         <p>Elkötelezettek vagyunk tanulóink sikere mellett, személyre szabott támogatást nyújtunk mindenkinek.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="accreditations-section">
+            <!-- <div class="accreditations-section">
                 <h2 data-translate="about-accreditations-title">Akkreditációink és Elismeréseink</h2>
                 <div class="accred-grid">
                     <div class="accred-item">
@@ -141,7 +140,7 @@
                         <p>Minőségirányítási rendszerünk ISO 9001 szabvány szerint működik.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -156,53 +155,28 @@
             <div class="instructors-grid">
                 <div class="instructor-card">
                     <div class="instructor-photo">
-                        <img src="https://via.placeholder.com/200x200?text=Kovács+János" alt="Kovács János">
+                        <img src="https://via.placeholder.com/200x200?text=Czini+Tibor" alt="Czini Tibor">
                     </div>
-                    <h4>Kovács János</h4>
-                    <p class="instructor-title">Főoktató, Kapitány</p>
-                    <p>25 év tapasztalat a belvízi hajózásban, több mint 1000 sikeres vizsgázó. Szakértő a hajóvezetés és navigáció terén.</p>
+                    <h4 data-translate="instructor1-name">Czini Tibor</h4>
+                    <p class="instructor-title" data-translate="instructor1-title">Vezető Hajós Oktató</p>
+                    <p data-translate="instructor1-full-desc">Több mint 20 év hajózási tapasztalattal rendelkezik, amelyet hajóvezetőként, géptisztként, valamint hajózási és nautikai szakértőként szerzett belföldi és nemzetközi környezetben egyaránt. Szakterülete a hajózási műszaki rendszerek, az üzemeltetés, valamint a biztonságos hajóvezetés. Végzettségei közé tartozik a hajózási technikus, valamint a közlekedésüzemviteli, kikötői és hajózási technikus képesítés. Nemzetközi nagyhajó-üzemeltetési vezetőként és radarhajósként kiemelt hangsúlyt fektet a korszerű navigációs technikákra és a gyakorlatorientált oktatásra. Jelenleg is hajóparancsnokként dolgozik az Amadeus cégnél, így oktatói tevékenységében naprakész, valós üzemi tapasztalatokra támaszkodik.</p>
                     <div class="instructor-qualifications">
-                        <span><i class="fas fa-certificate"></i> Kapitányi engedély</span>
-                        <span><i class="fas fa-chalkboard-teacher"></i> Oktatói mesterfokozat</span>
+                        <span><i class="fas fa-certificate"></i> Hajózási technikus</span>
+                        <span><i class="fas fa-ship"></i> Hajóparancsnok</span>
+                        <span><i class="fas fa-radar"></i> Radarhajós</span>
                     </div>
                 </div>
 
                 <div class="instructor-card">
                     <div class="instructor-photo">
-                        <img src="https://via.placeholder.com/200x200?text=Nagy+Petra" alt="Nagy Petra">
+                        <img src="https://via.placeholder.com/200x200?text=Gáthy+Gergely" alt="Gáthy Gergely">
                     </div>
-                    <h4>Nagy Petra</h4>
-                    <p class="instructor-title">Szimulátor Szakértő</p>
-                    <p>Nemzetközi tapasztalat hajószimulátorok terén, innovatív oktatási módszerek kidolgozója. 15 év oktatói gyakorlat.</p>
+                    <h4 data-translate="instructor2-name">Gáthy Gergely</h4>
+                    <p class="instructor-title" data-translate="instructor2-title">Irodavezető</p>
+                    <p data-translate="instructor2-desc">Koordinálja az iskola adminisztratív és szervezési feladatait, biztosítva a zökkenőmentes működést és a tanulók számára a legjobb szolgáltatást. Felel a beiratkozások, vizsgák szervezéséért és az iskola napi működéséért.</p>
                     <div class="instructor-qualifications">
-                        <span><i class="fas fa-desktop"></i> Szimulátor szakértő</span>
-                        <span><i class="fas fa-globe"></i> STCW oktató</span>
-                    </div>
-                </div>
-
-                <div class="instructor-card">
-                    <div class="instructor-photo">
-                        <img src="https://via.placeholder.com/200x200?text=Szabó+Mihály" alt="Szabó Mihály">
-                    </div>
-                    <h4>Szabó Mihály</h4>
-                    <p class="instructor-title">Vizsga Biztos</p>
-                    <p>Szakértő az engedélyek és vizsgák terén, precíz és alapos oktatás. 20 év tapasztalat a vizsgáztatásban.</p>
-                    <div class="instructor-qualifications">
-                        <span><i class="fas fa-clipboard-check"></i> Vizsgabiztos</span>
-                        <span><i class="fas fa-book"></i> Elméleti szakértő</span>
-                    </div>
-                </div>
-
-                <div class="instructor-card">
-                    <div class="instructor-photo">
-                        <img src="https://via.placeholder.com/200x200?text=Tóth+Andrea" alt="Tóth Andrea">
-                    </div>
-                    <h4>Tóth Andrea</h4>
-                    <p class="instructor-title">Biztonsági Szakértő</p>
-                    <p>Hajózási biztonság és vészhelyzet-kezelés specialistája. Nemzetközi biztonsági tréningek vezetője.</p>
-                    <div class="instructor-qualifications">
-                        <span><i class="fas fa-life-ring"></i> Biztonsági oktató</span>
-                        <span><i class="fas fa-first-aid"></i> Elsősegély oktató</span>
+                        <span><i class="fas fa-tasks"></i> Adminisztráció</span>
+                        <span><i class="fas fa-calendar-check"></i> Vizsgaszervezés</span>
                     </div>
                 </div>
             </div>
@@ -253,8 +227,8 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <a href="index.html" class="footer-logo">
-                        <img src="forrasok/logo (2).png" alt="Hajós Akadémia Logo">
-                        <span>HAJÓS AKADÉMIA</span>
+                        <img src="forrasok/logo (2).png" alt="ENCA Logo">
+                        <span>ENCA</span>
                     </a>
                 </div>
 
@@ -279,7 +253,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p data-translate="footer-copyright">&copy; 2026 Hajós Akadémia - Minden jog fenntartva.</p>
+                <p data-translate="footer-copyright">&copy; 2026 ENCA - Minden jog fenntartva.</p>
                 <div class="footer-legal">
                     <a href="#" data-translate="footer-privacy">Adatkezelési Tájékoztató</a>
                     <a href="#" data-translate="footer-cookies">Süti Szabályzat</a>
