--- a/site/contact.html
+++ b/site/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kapcsolat - Hajós Akadémia</title>
+    <title>Kapcsolat - ENCA</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,14 +13,13 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="forrasok/logo (2).png" alt="Hajós Akadémia Logo">
-                    <span>HAJÓS AKADÉMIA</span>
+                    <img src="forrasok/logo (2).png" alt="ENCA Logo">
+                    <span>ENCA</span>
                 </a>
 
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
                         <li><a href="courses.html" class="nav-link" data-translate="nav-courses">Courses</a></li>
-                        <li><a href="certificates.html" class="nav-link" data-translate="nav-certificates">Certificates & Permits</a></li>
                         <li><a href="about.html" class="nav-link" data-translate="nav-about">About Us</a></li>
                         <li><a href="contact.html" class="nav-link active" data-translate="nav-contact">Contact Us</a></li>
                     </ul>
@@ -28,10 +27,10 @@
                     <div class="header-actions">
                         <div class="language-selector">
                             <button class="lang-btn active" data-lang="hu">🇭🇺</button>
-                            <button class="lang-btn" data-lang="en">🇺🇸</button>
+                            <button class="lang-btn" data-lang="en">🇬🇧</button>
                         </div>
                         <a href="#instructor-login" class="btn btn-instructor">
-                            <i class="fas fa-user"></i> <span data-translate="instructor-login">Oktatói Felület</span>
+                            <i class="fas fa-user"></i> <span data-translate="instructor-login">Sail Portal</span>
                         </a>
                     </div>
                 </nav>
@@ -115,8 +114,8 @@
 
                         <div class="info-card">
                             <i class="fas fa-clock"></i>
-                            <h4>Nyitvatartás</h4>
-                            <p>Hétfő - Péntek: 9:00 - 17:00<br>Szombat: 9:00 - 13:00<br>Vasárnap: Zárva</p>
+                            <h4 data-translate="contact-hours-title">Nyitvatartás</h4>
+                            <p data-translate="contact-hours-text">Hétfő: 10:00 - 14:00<br>Szerda: 14:00 - 18:00</p>
                         </div>
 
                         <div class="info-card">
@@ -127,8 +126,8 @@
 
                         <div class="info-card">
                             <i class="fas fa-envelope"></i>
-                            <h4>Email</h4>
-                            <p><a href="mailto:info@hajosakademia.hu">info@hajosakademia.hu</a><br><a href="mailto:kepzes@hajosakademia.hu">kepzes@hajosakademia.hu</a></p>
+                            <h4 data-translate="contact-email-title">Email</h4>
+                            <p><a href="mailto:info@enca.hu">info@enca.hu</a><br><a href="mailto:info@hivatasosjogsi.hu">info@hivatasosjogsi.hu</a></p>
                         </div>
                     </div>
 
@@ -225,8 +224,8 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <a href="index.html" class="footer-logo">
-                        <img src="forrasok/logo (2).png" alt="Hajós Akadémia Logo">
-                        <span>HAJÓS AKADÉMIA</span>
+                        <img src="forrasok/logo (2).png" alt="ENCA Logo">
+                        <span>ENCA</span>
                     </a>
                 </div>
 
@@ -251,7 +250,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p data-translate="footer-copyright">&copy; 2026 Hajós Akadémia - Minden jog fenntartva.</p>
+                <p data-translate="footer-copyright">&copy; 2026 ENCA - Minden jog fenntartva.</p>
                 <div class="footer-legal">
                     <a href="#" data-translate="footer-privacy">Adatkezelési Tájékoztató</a>
                     <a href="#" data-translate="footer-cookies">Süti Szabályzat</a>
