--- a/site/courses.html
+++ b/site/courses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanfolyamok - Hajós Akadémia</title>
+    <title>Tanfolyamok - ENCA</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,14 +13,13 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="forrasok/logo (2).png" alt="Hajós Akadémia Logo">
-                    <span>HAJÓS AKADÉMIA</span>
+                    <img src="forrasok/logo (2).png" alt="ENCA Logo">
+                    <span>ENCA</span>
                 </a>
 
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
                         <li><a href="courses.html" class="nav-link active" data-translate="nav-courses">Courses</a></li>
-                        <li><a href="certificates.html" class="nav-link" data-translate="nav-certificates">Certificates & Permits</a></li>
                         <li><a href="about.html" class="nav-link" data-translate="nav-about">About Us</a></li>
                         <li><a href="contact.html" class="nav-link" data-translate="nav-contact">Contact Us</a></li>
                     </ul>
@@ -28,10 +27,10 @@
                     <div class="header-actions">
                         <div class="language-selector">
                             <button class="lang-btn active" data-lang="hu">🇭🇺</button>
-                            <button class="lang-btn" data-lang="en">🇺🇸</button>
+                            <button class="lang-btn" data-lang="en">🇬🇧</button>
                         </div>
                         <a href="#instructor-login" class="btn btn-instructor">
-                            <i class="fas fa-user"></i> <span data-translate="instructor-login">Oktatói Felület</span>
+                            <i class="fas fa-user"></i> <span data-translate="instructor-login">Sail Portal</span>
                         </a>
                     </div>
                 </nav>
@@ -62,8 +61,8 @@
                         <img src="https://via.placeholder.com/400x250?text=Hajóskapitány+Képzés" alt="Hajóskapitány Képzés">
                     </div>
                     <div class="course-content">
-                        <h3 data-translate="course1-title">Hajóskapitány Képzés</h3>
-                        <p data-translate="course1-detail-desc">Átfogó képzés hajóskapitányoknak, amely tartalmazza az elméleti és gyakorlati ismereteket a biztonságos hajózáshoz.</p>
+                        <h3 data-translate="course1-title">Biztonsági Alapképzés</h3>
+                        <p data-translate="course1-detail-desc">Alapvető biztonsági ismeretek és gyakorlatok hajózási szakemberek számára, nemzetközi sztenderdek szerint.</p>
 
                         <div class="course-details">
                             <div class="detail-item">
@@ -102,8 +101,8 @@
                         <img src="https://via.placeholder.com/400x250?text=Szimulátor+Tréning" alt="Szimulátor Tréning">
                     </div>
                     <div class="course-content">
-                        <h3 data-translate="course2-title">Szimulátor Tréning</h3>
-                        <p data-translate="course2-detail-desc">Modern szimulátoros gyakorlatok valós helyzetekben, szakképzett oktatók vezetésével. A legújabb technológiával felszerelt központunkban.</p>
+                        <h3 data-translate="course2-title">Hajóvezető (uniós)</h3>
+                        <p data-translate="course2-detail-desc">Uniós hajóvezetői képesítés megszerzése nemzetközileg elismert vizsgákkal és gyakorlati oktatással.</p>
 
                         <div class="course-details">
                             <div class="detail-item">
@@ -142,8 +141,8 @@
                         <img src="https://via.placeholder.com/400x250?text=Engedély+Megújítás" alt="Engedély Megújítás">
                     </div>
                     <div class="course-content">
-                        <h3 data-translate="course3-title">Engedély Megújítás</h3>
-                        <p data-translate="course3-detail-desc">Engedélyek és jogosítványok megújítása, továbbképzések tapasztalt szakembereknek. Gyors és hatékony folyamat.</p>
+                        <h3 data-translate="course3-title">Személyhajózási szakértő (uniós)</h3>
+                        <p data-translate="course3-detail-desc">Személyszállító hajók vezetéséhez szükséges speciális képesítés megszerzése, uniós szabványoknak megfelelően.</p>
 
                         <div class="course-details">
                             <div class="detail-item">
@@ -182,8 +181,8 @@
                         <img src="https://via.placeholder.com/400x250?text=Vitorlás+Képzés" alt="Vitorlás Képzés">
                     </div>
                     <div class="course-content">
-                        <h3>Vitorlás Képzés</h3>
-                        <p>Vitorlázás alapjai és haladó technikák elsajátítása tapasztalt oktatókkal. Elméleti és gyakorlati órák kombinációja.</p>
+                        <h3 data-translate="course4-title">Gépkezelő</h3>
+                        <p data-translate="course4-detail-desc">Hajógép-kezelői képesítés megszerzése, műszaki rendszerek ismerete és karbantartási gyakorlatok elsajátítása.</p>
 
                         <div class="course-details">
                             <div class="detail-item">
@@ -222,8 +221,8 @@
                         <img src="https://via.placeholder.com/400x250?text=Motoros+Hajó+Képzés" alt="Motoros Hajó Képzés">
                     </div>
                     <div class="course-content">
-                        <h3>Motoros Hajó Képzés</h3>
-                        <p>Motoros hajók biztonságos vezetésének elsajátítása. Kihajózási gyakorlatok a Balatonon és Dunán.</p>
+                        <h3 data-translate="course5-title">Radarhajós (uniós)</h3>
+                        <p data-translate="course5-detail-desc">Radar navigációs rendszerek kezelésének elsajátítása uniós szabványok szerint, modern eszközökkel.</p>
 
                         <div class="course-details">
                             <div class="detail-item">
@@ -262,8 +261,8 @@
                         <img src="https://via.placeholder.com/400x250?text=Rádió+Kezelés" alt="Rádió Kezelés">
                     </div>
                     <div class="course-content">
-                        <h3>Rádió Kezelés Tanfolyam</h3>
-                        <p>Hajózási rádióberendezések használatának elsajátítása. VHF és UHF rádió kezelői vizsga felkészítés.</p>
+                        <h3 data-translate="course6-title">Matróz (uniós)</h3>
+                        <p data-translate="course6-detail-desc">Uniós matróz képesítés megszerzése, fedélzeti munkák és hajókezelési alapismeretek elsajátítása.</p>
 
                         <div class="course-details">
                             <div class="detail-item">
@@ -317,8 +316,8 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <a href="index.html" class="footer-logo">
-                        <img src="forrasok/logo (2).png" alt="Hajós Akadémia Logo">
-                        <span>HAJÓS AKADÉMIA</span>
+                        <img src="forrasok/logo (2).png" alt="ENCA Logo">
+                        <span>ENCA</span>
                     </a>
                 </div>
 
@@ -343,7 +342,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p data-translate="footer-copyright">&copy; 2026 Hajós Akadémia - Minden jog fenntartva.</p>
+                <p data-translate="footer-copyright">&copy; 2026 ENCA - Minden jog fenntartva.</p>
                 <div class="footer-legal">
                     <a href="#" data-translate="footer-privacy">Adatkezelési Tájékoztató</a>
                     <a href="#" data-translate="footer-cookies">Süti Szabályzat</a>
